change app name

--- a/uni.scss
+++ b/uni.scss
@@ -84,9 +84,9 @@ $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph: 30rpx;
 
 /* 项目特定变量 */
-$charging-color-primary: #FFA500; // 馨澜美邻主色调
-$charging-color-secondary: #1a1a2e; // 馨澜美邻次要色
-$charging-color-secondary-light: #16213e; // 馨澜美邻浅色次要色
+$charging-color-primary: #FFA500; // 澜充小站主色调
+$charging-color-secondary: #1a1a2e; // 澜充小站次要色
+$charging-color-secondary-light: #16213e; // 澜充小站浅色次要色
 $charging-gradient-navbar: linear-gradient(to right, #1a1a2e, #16213e); // 导航栏渐变
 $charging-gradient-primary: linear-gradient(to right, #FFA500, #F39C12); // 主色调渐变
 $charging-shadow-sm: 0 2rpx 6rpx rgba(0, 0, 0, 0.05); // 小阴影
